Исправлена работа с русской раскладкой

--- a/bindings.conf
+++ b/bindings.conf
@@ -2,16 +2,16 @@
 # Dvorak-based bindings
 
 # kill focused window
-bindsym $mod+Shift+apostrophe kill
+bindsym --to-code $mod+Shift+apostrophe kill
 
 # app launcher
-bindsym $mod+e exec $menu
+bindsym --to-code $mod+e exec $menu
 
 # reload config
-bindsym $mod+Shift+j reload
+bindsym --to-code $mod+Shift+j reload
 
 # logout
-bindsym $mod+Shift+period exec swaynag -t warning -m 'Уходишь?' -B 'Да' 'swaymsg exit'
+bindsym --to-code $mod+Shift+period exec swaynag -t warning -m 'Уходишь?' -B 'Да' 'swaymsg exit'
 
 set $left h
 set $down t
@@ -19,42 +19,53 @@ set $up n
 set $right s
 
 # change focus
-bindsym $mod+$left focus left
-bindsym $mod+$down focus down
-bindsym $mod+$up focus up
-bindsym $mod+$right focus right
+byndsym --to-code {
+  $mod+$left focus left
+  $mod+$down focus down
+  $mod+$up focus up
+  $mod+$right focus right
+}
 # with arrows
-bindsym $mod+Left focus left
-bindsym $mod+Down focus down
-bindsym $mod+Up focus up
-bindsym $mod+Right focus right
+bindsym --to-code {
+  $mod+Left focus left
+  $mod+Down focus down
+  $mod+Up focus up
+  $mod+Right focus right
+}
 
 # move focused window
-bindsym $mod+Shift+$left move left
-bindsym $mod+Shift+$down move down
-bindsym $mod+Shift+$up move up
-bindsym $mod+Shift+$right move right
+bindsym --to-code {
+  $mod+Shift+$left move left
+  $mod+Shift+$down move down
+  $mod+Shift+$up move up
+  $mod+Shift+$right move right
+}
+
 # with arrows
-bindsym $mod+Shift+Left move left
-bindsym $mod+Shift+Down move down
-bindsym $mod+Shift+Up move up
-bindsym $mod+Shift+Right move right
+bindsym --to-code {
+  $mod+Shift+Left move left
+  $mod+Shift+Down move down
+  $mod+Shift+Up move up
+  $mod+Shift+Right move right
+}
 
 # split in horizontal orientation
-bindsym $mod+x splith
+bindsym --to-code $mod+x splith
 # split in vertical orientation
-bindsym $mod+k splitv
+bindsym --to-code $mod+k splitv
 
 # enter fullscreen mode for the focused container
-bindsym $mod+u fullscreen toggle
+bindsym --to-code $mod+u fullscreen toggle
 
 # change container layout (stacked, tabbed, toggle split)
-bindsym $mod+o layout stacking
-bindsym $mod+comma layout tabbed
-bindsym $mod+period layout toggle split
+bindsym --to-code {
+  $mod+o layout stacking
+  $mod+comma layout tabbed
+  $mod+period layout toggle split
+}
 
 # focus the parent container
-bindsym $mod+a focus parent
+bindsym --to-code $mod+a focus parent
 
-bindsym $mod+Shift+minus move scratchpad
-bindsym $mod+minus scratchpad show
+bindsym --to-code $mod+Shift+minus move scratchpad
+bindsym --to-code $mod+minus scratchpad show
