--- a/bindings.conf
+++ b/bindings.conf
@@ -69,3 +69,5 @@ bindsym --to-code $mod+a focus parent
 
 bindsym --to-code $mod+Shift+minus move scratchpad
 bindsym --to-code $mod+minus scratchpad show
+
+bindsym --to-code $mod+l exec swaylock -f
