--- a/bindings.conf
+++ b/bindings.conf
@@ -19,7 +19,7 @@ set $up n
 set $right s
 
 # change focus
-byndsym --to-code {
+bindsym --to-code {
   $mod+$left focus left
   $mod+$down focus down
   $mod+$up focus up
@@ -71,3 +71,6 @@ bindsym --to-code $mod+Shift+minus move scratchpad
 bindsym --to-code $mod+minus scratchpad show
 
 bindsym --to-code $mod+l exec swaylock -f
+
+set $term kitty
+bindsym --no-warn $mod+Return exec $term
