--- a/display.conf
+++ b/display.conf
@@ -5,3 +5,5 @@ output DP-3 scale 2
 set $laptop eDP-1
 bindswitch --reload --locked lid:on output $laptop disable
 bindswitch --reload --locked lid:off output $laptop enable
+
+exec_always $HOME/.config/sway/config.d/clam.sh
